--- a/Angular/src/app/stories/stories.component.html
+++ b/Angular/src/app/stories/stories.component.html
@@ -3,7 +3,7 @@
 <a (click)="drugePrice()">Other stories</a>
 <div class="kontejner">
 <h1>Stories opened for donations</h1>
-    <button type="button" class="btn btn-dark btn-lg" style="width:30%; height:20%; margin:2%" (click)="novaPrica()" >Add your story</button>
+    <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" type="button" class="btn btn-dark btn-lg" style="width:30%; height:20%; margin:2%" (click)="novaPrica()" >Add your story</button>
   <div *ngFor="let x of pagingPodaci.price" class="kartica">
     <img src="{{getSliku(x)}}" style="max-height:10%; max-width:20%; float:left; margin:3%">
     <h3>{{x.naslov}}</h3>
