--- a/Angular/src/app/log-in/log-in.component.html
+++ b/Angular/src/app/log-in/log-in.component.html
@@ -1,28 +1,30 @@
-<p style="font-weight: bold; font-size: 50px"> Log in</p>
+
 
 <form [formGroup]="LogInForma" (ngSubmit)="onSubmit()">
+  <div class="kontejner">
+    <p style="font-weight: bold; font-size: 50px; color: white"> Log in</p>
   <label>
-    <p style="font-weight: bold; font-size: 17px;"> Username: </p>
-    <input type="text" [(ngModel)]="this.username " formControlName="username" placeholder="username">
+    <p style="font-weight: bold; font-size: 30px; color: white"> Username: </p>
+    <input type="text" [(ngModel)]="this.username " formControlName="username" placeholder="username" style="border-radius: 30px; width: 100%">
     <div *ngIf="submitted && LogInForma.controls.username.errors" class="error">
       <div *ngIf="LogInForma.controls.username.errors?.['required']"> You have to enter username! </div>
     </div>
   </label>
 
   <label>
-    <p style="font-weight: bold; font-size: 17px;"> Password: </p>
-    <input type="password" [(ngModel)]="this.password" formControlName="password" placeholder="*****">
+    <p style="font-weight: bold; font-size: 30px;color: white"> Password: </p>
+    <input type="password" [(ngModel)]="this.password" formControlName="password" placeholder="*****" style="border-radius: 30px; width: 100%;">
     <div *ngIf="submitted && LogInForma.controls.password.errors" class="error">
       <div *ngIf="LogInForma.controls.password.errors?.['required']"> You have to enter password! </div>
     </div>
   </label>
 
-
-  <button type="click" class="cta">Log in </button>
+<hr style="color: white">
+  <button type="click" class="cta" style="border-radius: 30px; border: none; color: white; background-color: #EE6C4D; width: 100% ; font-size: 20px">Log in </button>
   <br><br>
 
-  <a style="font-size: 25px; text-decoration-line: underline" href="/registration">Dont have an account? Register here!</a>
-
+  <a style="font-size: 25px; text-decoration:none; color: white" href="/registration">Dont have an account? Register here!</a>
+  </div>
 </form>
 
 
