--- a/Angular/src/app/registration/registration.component.html
+++ b/Angular/src/app/registration/registration.component.html
@@ -142,7 +142,7 @@
     <br>
     <br>
     <div class="dugme">
-      <button type="submit" style="font-weight: bold; font-size: 20px; color: white; background-color: black; padding: 20px; margin-left: 75%; width:20%;"  > Register </button>
+      <button type="submit" style="font-weight: bold; font-size: 20px; color: white; background-color: #EE6C4D; padding: 20px; margin-left: 75%; width:20%; border-radius: 30px; border: none"  > Register </button>
     </div>
 
   </form>
