--- a/Angular/src/app/registration/registration.component.scss
+++ b/Angular/src/app/registration/registration.component.scss
@@ -1,7 +1,9 @@
 .pozadina{
-  background-color: rgba(0,0,0,0.576);
+  background-color: #99C1D9;
   margin:5px;
   padding: 20px;
+  height:100%;
+  border-radius: 30px;
 }
 .error{
     margin-top: -20px;
