--- a/Angular/src/app/user-profile/user-profile.component.scss
+++ b/Angular/src/app/user-profile/user-profile.component.scss
@@ -1,19 +1,25 @@
 h1{
-  color: white;
+  color: #3D5A80;
   text-align: center;
   font-weight: bold;
   font-family: Montserrat;
 }
 h2{
   font-weight: bold;
+  border-radius: 30px;
+  color: #3D5A80;
 }
 h3{
-  background-color: lightgrey;
+  background-color: #E0FBFC;
+  border-radius: 30px;
+  color:#3D5A80
 }
 .kontejner{
-background-color: rgba(0,0,0,0.567);
+  background-color: #99C1D9;
   margin:5px;
   padding: 20px;
+  height:100%;
+  border-radius: 30px;
 }
 
 .card {
@@ -22,5 +28,6 @@ background-color: rgba(0,0,0,0.567);
   margin: auto;
   text-align: center;
   box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  border-radius: 30px;
 }
 
