--- a/Angular/src/app/stories/stories.component.html
+++ b/Angular/src/app/stories/stories.component.html
@@ -1,32 +1,23 @@
-<a (click)="tvojePrice()">Your stories</a>
-<br>
-<a (click)="drugePrice()">Other stories</a>
+
 <div class="kontejner">
 <h1>Stories opened for donations</h1>
-    <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" type="button" class="btn btn-dark btn-lg" style="width:30%; height:20%; margin:2%" (click)="novaPrica()" >Add your story</button>
+    <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" type="button" class="btn btn-dark btn-lg" style="width:30%; height:20%; margin:2%; color: white; background-color: #EE6C4D; border: none; border-radius: 30px; margin-left:60% " (click)="novaPrica()" >Add your story</button>
   <div *ngFor="let x of pagingPodaci.price" class="kartica">
-    <img src="{{getSliku(x)}}" style="max-height:10%; max-width:20%; float:left; margin:3%">
+    <img src="{{getSliku(x)}}" style="max-height:100%; max-width:20%; float:left; margin:3%">
     <h3>{{x.naslov}}</h3>
-    <h3>{{x.opis}}</h3>
-    <h4>GOAL: {{x.novcani_cilj}} $</h4>
-   <a class="btn btn-dark" (click)="openDetails(x)" style="margin-left:90%; margin-bottom: 1%"> Details</a>
+    <h4>GOAL {{x.novcani_cilj}} $</h4>
+   <a class="btn btn-dark" (click)="openDetails(x)" style="margin-left:85%; margin-bottom: 1%; border-radius: 30px; color: white; background-color: #EE6C4D; border: none;font-size: 20px"> Details</a>
     <hr>
   </div>
-  <br> <br>
+<br> <br>
   <div style="display:inline-block; width:100%; height:100%">
-      <div style="width:50%">
-       <button type="button" class="btn btn-dark btn-lg"
-          *ngIf="trenutnaStranica > 1" (click)="prethodnaStranica()">Previous</button>
-        <button type="button" class="btn btn-dark btn-lg"
-          *ngIf="trenutnaStranica < totalPages" (click)="sljedecaStranica()">Next</button>
-      </div>
+    <div style="width:100%">
+      <button type="button" class="btn btn-dark btn-lg" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none"
+              *ngIf="trenutnaStranica > 1" (click)="prethodnaStranica()">Previous</button>
+      <button type="button" class="btn btn-dark btn-lg" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none; float: right"
+              *ngIf="trenutnaStranica < totalPages" (click)="sljedecaStranica()">Next</button>
+    </div>
   </div>
-</div>
-
-
-
-
-
 
 <div *ngIf="odabranaPrica!=null" class="modal fade show" id="exampleModalLive" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
   <div class="modal-dialog">
@@ -77,5 +68,6 @@
 
     </div>
   </div>
+</div>
 </div>
 
