--- a/Angular/src/app/user-profile/user-profile.component.html
+++ b/Angular/src/app/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
   <div class="kontejner">
     <h1>Your profile</h1> <br>
     <div class="card">
-      <img src="{{getSlikuKorisnika(loginInfo().autentifikacijaToken.korisnickinalog.id)}}" alt="No profile picture!" style="width:100%">
+      <img src="{{getSlikuKorisnika(loginInfo().autentifikacijaToken.korisnickinalog.id)}}" alt="No profile picture!" style="width:100%; border-radius: 30px">
       <h2> Username:</h2>
       <h3>{{loginInfo().autentifikacijaToken!.korisnickinalog!.username}}</h3>
       <h2> Phone number:</h2>
@@ -10,9 +10,8 @@
       <h2> Email:</h2>
       <h3>{{loginInfo().autentifikacijaToken!.korisnickinalog!.email}}</h3>
     </div>
-    <button type="submit" (click)="otvoriFormu=true"> Change photo </button>
-    <br> <br>
-    <button type="submit" (click)="otvoriFormu2=true"> Change password</button>
+    <button type="submit" (click)="otvoriFormu=true" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none; font-size: 25px; padding: 8px"> Change photo </button>
+    <button type="submit" (click)="otvoriFormu2=true" style="background-color: #EE6C4D; color: white; border-radius: 30px; border:none; font-size: 25px; padding: 8px; float: right"> Change password</button>
   </div>
 
   <div *ngIf="otvoriFormu==true" class="modal fade show" id="exampleModalLive" tabindex="-1" aria-labelledby="exampleModalLiveLabel" aria-modal="true" role="dialog" style="display: block;">
