--- a/Angular/src/app/registration/registration.component.html
+++ b/Angular/src/app/registration/registration.component.html
@@ -137,6 +137,7 @@
         <div *ngIf="register.controls['slikaKorisnika'].errors.required">
           Profile picture is required.
         </div>
+        <img [src]="slikab64">
       </div>
     </div>
     <br>
