--- a/Angular/src/app/story-details/story-details.component.html
+++ b/Angular/src/app/story-details/story-details.component.html
@@ -19,7 +19,7 @@
       <h4>You can find us in <b>{{x.lokacija}}</b></h4>
       <img src="https://joomly.net/frontend/web/images/googlemap/map.png" style="height: 50%; width: 100%">
       <br> <br>
-      <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" type="submit" class="dugme" (click)="openDonation(x)"> DONATE NOW!</button> <br><br>
+      <button *ngIf="informacije().autentifikacijaToken.korisnickinalog.isKorisnik" type="submit" class="dugme" style="border-radius: 30px; border: none; font-weight:  bold; color: white; background-color:#EE6C4DFF " (click)="openDonation(x)"> DONATE NOW!</button> <br><br>
       <button type="submit" class="dugme"
               *ngIf="informacije().autentifikacijaToken.korisnickinalog.isAdmin"
               (click)="obrisiPricu(x.id)">Obriši priču</button>
