--- a/Angular/src/app/stories/stories.component.scss
+++ b/Angular/src/app/stories/stories.component.scss
@@ -5,11 +5,39 @@
   height:100%;
   border-radius: 30px;
 }
+h5{
+  color: white;
+}
+.dodavanjePrice{
+  background-color: #99C1D9;
+  margin:5px;
+ padding: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
+  height:100%;
+  border-radius: 30px;
+}
+.dodavanjePrice label{
+  font-weight: bold;
+  float: left;
+  color: white;
+}
+.dodavanjePrice input{
+  border-radius: 30px;
+  width: 100%;
+  border: none;
+  margin-bottom: 1%;
+}
 h1{
   color: white;
   text-align: center;
   font-weight: bold;
   font-family: Montserrat;
+}
+.divovi{
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
 }
 h3{
   margin-top:5%;
